src/objects/QIRS_Action_Plan__c.object
<CustomObject>
    <description>To create different types of action plans for QIRS record.</description>
    <fields>
        <fullName>ActionPlanDelayedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActionPlanDelayedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActionPlanExpiredFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActionPlanExpiredFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Aging__c</fullName>
        <formula>IF( (ISPICKVAL( Status__c , &apos;Closed&apos;) || (ISPICKVAL( Status__c , &apos;Canceled&apos;))) , 

TEXT( FLOOR( (Status_Date1__c   -  CreatedDate)) )+ &apos;Days&apos;+
&apos;/&apos;+TEXT(ROUND(  MOD((Status_Date1__c   -  CreatedDate)*24,24)   ,0))+&apos;hours&apos;,

TEXT( FLOOR( (NOW()   -  CreatedDate)) )+ &apos;Days&apos;+
&apos;/&apos;+TEXT(ROUND(  MOD((NOW()   -  CreatedDate)*24,24)   ,0))+&apos;hours&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Plan Aging</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Counter__c</fullName>
        <label>Action Plan Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <picklist>
            <picklistValues>
                <fullName>Containment/Temporal Solution</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Root Cause/Escape Point Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preventive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>App_Rej__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <description>Default value - 0
Approve - 1
Reject - 2</description>
        <label>App/Rej</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Comment__c</fullName>
        <description>Field for capturing approval comment</description>
        <label>Approval Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approver10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QIRS_Action_PlanM44g</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QIRS_Action_PlanM43i</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QIRS_Action_PlanM43s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancel_Comments__c</fullName>
        <description>field to have comments when anyone cancel the Action Plan.</description>
        <label>Reason for Cancelation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Champion10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Champion10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QIRS_Action_PlanM43Y</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Champion1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Champion1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QIRS_Action_Plan2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Champion2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Champion2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QIRS_Action_Plan3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_ID__c</fullName>
        <label>Core ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delegate task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_User_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee User ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$User.Id</field>
                <operation>equals</operation>
                <valueField>User.Manager.Id</valueField>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Nokia QIRS,Nokia QIRS Admin</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>QIRS_Action_Plan1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expired_Date_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired Date Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_for_Cancel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag to show whether cancel button is clicked once.</description>
        <label>Flag for Cancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Comment__c</fullName>
        <label>Implementation Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Date__c</fullName>
        <label>Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsAPCanceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAPCanceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsApproverChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsApproverChange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsChampChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsChampChange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRecall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for recall approval process.</description>
        <label>IsRecall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSenttoAPP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to check whether mail sent to approver or not</description>
        <label>IsSenttoAPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Code__c</fullName>
        <formula>IF(QIRS__r.PKNI_SBSCode__c == &apos;NA&apos;, &apos;NA&apos;,QIRS__r.PKNI_SBSCode__c)</formula>
        <label>Legacy Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager10__c</fullName>
        <label>Manager10</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager1__c</fullName>
        <defaultValue>$User.manager_email__c</defaultValue>
        <label>Manager1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager2__c</fullName>
        <defaultValue>$User.manager_email__c</defaultValue>
        <label>Manager2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ManagerEsclationFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ManagerEsclationFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QIRS_Action_PlanI5i9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Creation_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Original Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PKNI_ActionCode__c</fullName>
        <externalId>true</externalId>
        <label>PKNI_ActionCode</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QIRS__c</fullName>
        <label>QIRS</label>
        <referenceTo>QIRS__c</referenceTo>
        <relationshipLabel>Action Plan</relationshipLabel>
        <relationshipName>QIRS_Action_Plan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Re_Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason1__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reassign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reassign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Nokia QIRS, Nokia QIRS Admin</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>QIRS_Action_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_date__c</fullName>
        <label>Required date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusColor__c</fullName>
        <formula>IF( ISPICKVAL(Status__c,&quot;Open&quot;) ,&quot;Yellow&quot;,IF( ISPICKVAL(Status__c,&quot;No Action&quot;) ,&quot;Red &quot;, IF( ISPICKVAL(Status__c,&quot;Rejected&quot;),&quot;Pink&quot;, IF( ISPICKVAL(Status__c,&quot;Pending for Champion&quot;),&quot;LightBlue&quot;,IF( ISPICKVAL(Status__c,&quot;Implemented by champion&quot;),&quot;LightGray&quot;,IF( ISPICKVAL(Status__c,&quot;Accepted by Champion&quot;),&quot;LightGreen&quot;, IF( ISPICKVAL(Status__c,&quot;Closed&quot;) ,&quot;Green&quot;,&quot;white&quot;)))))))</formula>
        <label>StatusColor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Date1__c</fullName>
        <label>Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Action Type Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <color>#FFFF66</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
                <color>#78C953</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>QIRS_Action_Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Action Plan Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QIRS_Action_Plan</pluralLabel>
    <recordTypes>
        <fullName>QIRS_Action_Plan</fullName>
        <active>true</active>
        <label>QIRS_Action_Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>QIRS_Action_Plan_without_Cancel</fullName>
        <active>true</active>
        <description>Record type that doesnot show cancel button</description>
        <label>QIRS_Action_Plan_without_Cancel</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>QIRS_ActionPlan_Lock_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Lock__c , true, false)</errorConditionFormula>
        <errorDisplayField>Action_Plan_Counter__c</errorDisplayField>
        <errorMessage>Action plan can&apos;t edited as it is locked for approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIRS_Status_check_validation</fullName>
        <active>true</active>
        <description>check the status of QIRS record</description>
        <errorConditionFormula>IF( TEXT(QIRS__r.Status__c)  == &apos;Closed&apos;, true, false)</errorConditionFormula>
        <errorMessage>Unable to create Action plan as QIRS record is closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIRS_action_Plan_canceled_validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF((ISPICKVAL( Status__c , &apos;Canceled&apos;) &amp;&amp;   IsAPCanceled__c == false), true, false)</errorConditionFormula>
        <errorMessage>Canceled Record can not be edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIRS_action_Plan_closed_validation</fullName>
        <active>true</active>
        <description>ISPICKVAL( Status__c , &apos;Closed&apos;)</description>
        <errorConditionFormula>IF(NOT(ISCHANGED(Status__c)) &amp;&amp;  ISPICKVAL( Status__c , &apos;Closed&apos;), true, false)</errorConditionFormula>
        <errorMessage>Closed Record can not be edited</errorMessage>
    </validationRules>
</CustomObject>